# agentic-software-engineering

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.rst  pyproject.toml
.agents/skills/: SKILL.md
.agents/skills/rest-api/: SKILL.md
.github/: dependabot.yml
.github/workflows/: docs.yml  pre-commit.yml  zizmor.yml
LICENSES/: BSD-3-Clause.txt
docs/: AGENTS.md  Makefile  conf.py  context.rst  feedback-loops.rst  glossary.rst  index.rst  jupyter.rst  make.bat  procedure.rst  security.rst  setup.rst  shared-instructions.rst  verify.rst
docs/_static/css/: alerts.css
docs/_static/images/logo/: favicon.ico.license
docs/_templates/: base.html
docs/procedure/: index.rst  spec-driven-development.rst
docs/security/: guardrails.rst  index.rst  sandboxing.rst
docs/security/sandboxing/: index.rst  platforms.rst  technologies.rst
docs/shared-instructions/: agents.rst  hooks.rst  index.rst  skill.rst  slash-commands.rst
docs/shared-instructions/skill/: directory-structure.rst  env.rst  index.rst  plugins.rst  security.rst  skill-md-structure.rst  skills-mcp.rst
