# SPDX-FileCopyrightText: 2026 cusy GmbH
#
# SPDX-License-Identifier: BSD-3-Clause
[project]
name = "agentic-software-engineering"
version = "0.1.0"
description = "Agentic software engineering"
readme = "README.rst"
license = "BSD-3-Clause"
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = []

[dependency-groups]
dev = [
  "pre-commit",
  { include-group = "docs" },
]
docs = [
  "furo",
  "sphinx-copybutton",
  "sphinx-inline-tabs",
  "sphinx-lint",
  "sphinx-notfound-page",
  "sphinx-sitemap",
  "sphinxcontrib-mermaid",
  "sphinxcontrib-svg2pdfconverter",
  "sphinxext-opengraph",            # matplotlib is required for social cards
]

[tool.uv]
workspace.members = [
  "pre-commit",
]
